# four-in-a-row-duels

./: README.md
four_in_a_row_duels/: CMakeLists.txt  four_in_a_row_duels.yaml  four_in_a_row_duels_gui.py  server.cpp
four_in_a_row_duels/client_template/: CMakeLists.txt  four_in_a_row_duels.cpp
four_in_a_row_duels/client_template(backup)/: CMakeLists.txt  four_in_a_row_duels.cpp
four_in_a_row_duels/include/duels/four_in_a_row_duels/: four_in_a_row_duels_ai.h  game.h  game_grid.h  mechanics.h  msg.h  msg_detail.h
four_in_a_row_duels/src/: ai_level_three.cpp  ai_level_two.cpp  four_in_a_row_duels_ai.cpp  game_grid.cpp  mechanics.cpp
four_in_a_row_duels/tests/: test_game_grid.cpp
